--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: X-Marks-the-Asteroid_66211
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 66211-h/images/cover.jpg
 creator:
   author:
     agent_name: Rocklynne, Ross
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/34040
     wikipedia: https://en.wikipedia.org/wiki/Ross_Rocklynne
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66211#X-Marks-the-Asteroid
 gutenberg_issued: '2021-09-03'
 identifiers:
   gutenberg: '66211'
